@@ -1,8 +1,6 @@
 package de.typology.utils;
 
-import java.io.BufferedReader;
 import java.io.IOException;
-import java.io.InputStreamReader;
 
 public class SystemHelper {
 
@@ -13,16 +11,15 @@ public class SystemHelper {
 	public static void runUnixCommand(String cmd) {
 		Process p;
 		try {
-			p = Runtime.getRuntime().exec(cmd);
-			BufferedReader stdInput = new BufferedReader(new InputStreamReader(
-					p.getInputStream()));
-			String s = "";
-			while ((s = stdInput.readLine()) != null) {
-				System.out.println(s);
-			}
+			p = Runtime.getRuntime()
+					.exec(new String[] { "/bin/sh", "-c", cmd });
+			p.waitFor();
+			p.destroy();
+		} catch (InterruptedException e) {
+			e.printStackTrace();
 		} catch (IOException e) {
-			// TODO Auto-generated catch block
 			e.printStackTrace();
 		}
+
 	}
 }
